As a user I can see my transactions [Delivers #179230510]
