# routes/transactions.js
@@ -4,15 +4,14 @@ const Account = require("../models/Account")
 const Bank = require("../models/Bank")
 const Transaction = require("../models/Transaction")
 const base64url = require('base64url');
+const {verifyToken, refreshListOfBanksFromCentralBank, sendGetRequest} = require("../middlewares");
 const jose = require("node-jose");
 const fs = require("fs");
-const axios = require('axios');
-const {verifyToken, refreshListOfBanksFromCentralBank, sendGetRequest} = require("../middlewares");
+const axios = require("axios");
 
 
-
-function debitFromAccount(accountFrom, amount) {
-    accountFrom.balance -= amount;
+function debitAccount(accountFrom, amount) {
+    accountFrom.balance -= amount
     accountFrom.save()
 }
 
@@ -22,34 +21,29 @@ router.post('/', verifyToken, async function (req, res) {
 
         let statusDetail;
 
-        const accountTo = await Account.findOne({number: req.body.accountTo})
-
-        // 404 accountFrom not found
-        const accountFrom = await Account.findOne({number: req.body.accountFrom, userId: req.userId})
-
+        // 404 accountFrom not found"
+        const accountFrom = await Account.findOne({number: req.body.accountFrom})
         if (!accountFrom) {
-            return res.status(404).send({error: "account From not found"})
+            return res.status(404).send({error: "accountFrom not found"})
         }
 
 
         // 402 Insufficient funds
         if (req.body.amount > accountFrom.balance) {
-            return res.status(402).send({error: "Insufficient funds "})
+            return res.status(402).send({error: "Insufficient funds"})
         }
 
         // Get accountTo bank prefix
         const bankToPrefix = req.body.accountTo.slice(0, 3)
-
         let bankTo = await Bank.findOne({bankPrefix: bankToPrefix})
 
         if (!bankTo) {
-
             // Refresh the list of banks from central bank
             const result = await refreshListOfBanksFromCentralBank()
-            console.log(result)
+
 
             if (typeof result.error !== 'undefined') {
-                console.log('there was an error communication with central bank" ')
+                console.log('There was an error communication with Central Bank" ')
                 console.log(result.error)
                 statusDetail = result.error
 
@@ -68,7 +62,9 @@ router.post('/', verifyToken, async function (req, res) {
             console.log('Bank was cached')
         }
 
-        const transaction = await new Transaction({
+
+        // Add a Transaction to DB
+        await new Transaction({
             userId: req.userId,
             amount: req.body.amount,
             currency: accountFrom.currency,
@@ -76,17 +72,18 @@ router.post('/', verifyToken, async function (req, res) {
             accountTo: req.body.accountTo,
             explanation: req.body.explanation,
             statusDetail: statusDetail,
-            senderName: (await User.findOne({id: req.userId})).name
+            senderName: (await User.findOne({_id: req.userId})).name // sõna name lõppus kontrollida, midagi ei jõudnud vist kirjutada
+
         }).save()
 
         // Subtract amount from account
-        debitFromAccount(accountFrom, req.body.amount);
-
+        debitAccount(accountFrom, req.body.amount);
 
         // 201 Created
         return res.status(201).end()
 
     } catch (e) {
+
 
         // 400 Invalid amount
         if (/.*Cast to Number failed for value .*amount/.test(e.message)
@@ -103,6 +100,7 @@ router.post('/', verifyToken, async function (req, res) {
         // 500 Don't know what happened - internal server error
         console.log(e.message)
         return res.status(500).send({error: e.message})
+
 
     }
 
@@ -133,7 +131,7 @@ router.post('/b2b', async function (req, res) {
         const accountTo = await Account.findOne({number: payload.accountTo})
 
         if (!accountTo) {
-            return res.status(404).send({error: 'Account not found'})
+            return res.status(404).send({error: 'Account not found!'})
         }
 
         const accountFromBankPrefix = payload.accountFrom.substring(0, 3)
@@ -153,25 +151,27 @@ router.post('/b2b', async function (req, res) {
 
 
         // Validate signature
-
-        //  const jwks = await sendGetRequest(accountFromBank.jwksUrl)
-
-        // const keystore = jose.JWK.asKeyStore(jwks)
-        // try {
-        //     await jose.JWKS.createVerify(keystore).verify(req.body.jwt)
-        // } catch (e) {
-        //     return res.status(400).send({error: 'Invalid signature'})
-        // }
+        //
+         const jwks = await sendGetRequest(accountFromBank.jwksUrl)
+        //
+         const keystore = jose.JWK.asKeyStore(jwks)
+         try {
+             await jose.JWKS.createVerify(keystore).verify(req.body.jwt)
+         } catch (e) {
+             return res.status(400).send({error: 'Invalid signature'})
+         }
 
         let amount = payload.amount
+
+        // change currency
         if (accountTo.currency !== payload.currency) {
             const rate = await getRates(payload.currency, accountTo.currency)
-            amount = (parseInt(amount) * parseFloat(rate)).toFixed(0)
+            amount = parseInt((parseInt(amount) * parseFloat(rate)).toFixed(0))
         }
 
         const accountToOwner = await User.findOne({_id: accountTo.userId})
-        accountTo.balance += amount
-        accountTo.save();
+        accountTo.balance += parseInt(amount)
+        await accountTo.save();
 
         await Transaction.create({
             userId: accountToOwner._id,
@@ -203,12 +203,16 @@ async  function getRates(from,to) {
         }
     }
 }
-router.get('/', verifyToken, async (req, res, next) => {
 
-    // Get user's transactions
-    const transactions = await transactionModel.find({userId: req.userId})
+router.get('/', verifyToken, async (req, res, next)=>{
 
-    // return them
+    //Get user's transactions
+    const transactions = await  Transaction.find({userId: req.userId})
+
+    // Return them
+
     res.status(200).json(transactions)
+
 })
+
 module.exports = router
